# rust-campaigns-server

./: .env.sample  Cargo.toml  Procfile  README.md  app.json
docs/: data-model.md
examples/embed/: index.html
migrations/20170719175908_campaigns/: down.sql  up.sql
src/: lib.rs  main.rs
templates/: macros.tera  script.tera
